figured out variable fonts, storing variables across refresh

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 	<div id="container">
+		<div class="slider-container">
+			<label for="width-slider">W</label>
+			<input id="width-slider" type="range" orient="vertical" min="0" max="1000" value="50">
+		</div>
+
 		<div id="result-container">
 			<p id="result"></p>
 		</div>
@@ -48,13 +53,13 @@
 				</div>
 			</div>
 
-			<div class="font DeadisBetter">
+			<div class="font DeadisBetter variable">
 				<div class="font_name">
 					Dead is Better
 				</div>
 			</div>
 
-			<div class="font Dirts">
+			<div class="font Dirts variable">
 				<div class="font_name">
 					Dirts
 				</div>
@@ -123,7 +128,7 @@
 					<div class="font_style regular-italic">
 						regular italic
 					</div>
-					<div class="font_style vfvf">
+					<div class="font_style vfvf variable">
 						vfvf
 					</div>
 				</div>
@@ -173,13 +178,13 @@
 				</div>
 			</div>
 
-			<div class="font Signal_Grow">
+			<div class="font Signal_Grow variable">
 				<div class="font_name">
 					Signal Grow
 				</div>
 			</div>
 
-			<div class="font Signal_Inflate">
+			<div class="font Signal_Inflate variable">
 				<div class="font_name">
 					Signal Inflate
 				</div>
@@ -187,10 +192,10 @@
 			
 			<div class="font Spritch">
 				<div class="font_styles">
-					<div class="font_style AVF">
+					<div class="font_style AVF variable">
 						AVF
 					</div>
-					<div class="font_style BVF">
+					<div class="font_style BVF variable">
 						BVF
 					</div>
 				</div>
@@ -199,7 +204,7 @@
 				</div>
 			</div>
 
-			<div class="font Subbookkeeper">
+			<div class="font Subbookkeeper variable">
 				<div class="font_name">
 					Subbookkeeper
 				</div>
