--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 		<div id="result-container">
 			<p id="result"></p>
+			<!-- <p class="vf_animation" style="font-family:'DeadisBetter'"> HIE HIEHRIHQEIRH </p> -->
 		</div>
 
 		<div class="font_choices">
@@ -84,16 +85,16 @@
 
 			<div class="font HeartBeat">
 				<div class="font_styles">
-					<div class="font_style inside">
+					<div class="font_style inside variable">
 						inside
 					</div>
-					<div class="font_style merged">
+					<div class="font_style merged variable">
 						merged
 					</div>
-					<div class="font_style outside">
+					<div class="font_style outside variable">
 						outside
 					</div>
-					<div class="font_style stroke">
+					<div class="font_style stroke variable">
 						stroke
 					</div>
 				</div>
