--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 <body>
 	<div id="container">
 		<div class="slider-container">
-			<label for="width-slider">W</label>
-			<input id="width-slider" type="range" orient="vertical" min="0" max="1000" value="50">
+			<!-- <label for="width-slider">W</label> -->
+			<input id="width-slider" type="range" orient="vertical" min="0" max="1000" value="1000">
 		</div>
 
 		<div id="result-container">
 			<p id="result"></p>
 			<!-- <p class="vf_animation" style="font-family:'DeadisBetter'"> HIE HIEHRIHQEIRH </p> -->
+			<video autoplay muted loop>
+				<source src="vids/speaker_1.mp4" type="video/mp4">
+			</video>
 		</div>
 
 		<div class="font_choices">
